Исправил некоторые баги

--- a/Anti-Procrastination/Anti-Procrastination.csproj
+++ b/Anti-Procrastination/Anti-Procrastination.csproj
@@ -16,4 +16,8 @@
     <Compile Remove="DirectoryExplorerView.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+  </ItemGroup>
+
 </Project>
