--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,6 @@
 
 # CA2011: Избегайте бесконечной рекурсии
 dotnet_diagnostic.CA2011.severity = error
+
+# CS8618: Поле, не допускающее значения NULL, должно содержать значение, отличное от NULL, при выходе из конструктора. Рассмотрите возможность добавления модификатора "required" или объявления значения, допускающего значение NULL.
+dotnet_diagnostic.CS8618.severity = silent
