--- a/Anti-Procrastination/Anti-Procrastination.csproj
+++ b/Anti-Procrastination/Anti-Procrastination.csproj
@@ -9,8 +9,14 @@
     <UseWindowsForms>False</UseWindowsForms>
     <StartupObject>Anti_Procrastination.Program</StartupObject>
 	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
-	<PlatformTarget>x64</PlatformTarget>
+	<PlatformTarget>AnyCPU</PlatformTarget>
+	<ApplicationIcon>favicon.ico</ApplicationIcon>
+	<PackageIcon>ICo.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="favicon.ico" />
+  </ItemGroup>
 
 
   <ItemGroup>
